# motion_planning

./: CMakeLists.txt  package.xml
launch/: sim_demo.launch  start_gazebo.launch
rviz/: moveit_rdebug.rviz
scripts/: demo.py  dynamic_graspper.py
src/: motion_planning_node.cpp
worlds/: sim_test.world
